--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="release/Block Quest.apk"
+export_path="release/Block Quest v0.1 - demo.apk"
 script_export_mode=1
 script_encryption_key=""
 
