--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -5,9 +5,9 @@ platform="Android"
 runnable=true
 custom_features=""
 export_filter="all_resources"
-include_filter="*.env"
-exclude_filter=""
-export_path="release/Block Quest v0.3.apk"
+include_filter="*.env, *.json"
+exclude_filter="release/*, release/"
+export_path="release/Block Quest v0.7.apk"
 script_export_mode=1
 script_encryption_key=""
 
@@ -30,8 +30,8 @@ keystore/release=""
 keystore/release_user=""
 keystore/release_password=""
 one_click_deploy/clear_previous_install=false
-version/code=1
-version/name="1.0"
+version/code=7
+version/name="0.7"
 package/unique_name="com.blockquest.weirdbuggames"
 package/name="Block Quest"
 package/signed=true
@@ -64,7 +64,7 @@ permissions/access_location_extra_commands=false
 permissions/access_mock_location=false
 permissions/access_network_state=true
 permissions/access_surface_flinger=false
-permissions/access_wifi_state=true
+permissions/access_wifi_state=false
 permissions/account_manager=false
 permissions/add_voicemail=false
 permissions/authenticate_accounts=false
